--- a/frontend/views/index.hbs
+++ b/frontend/views/index.hbs
@@ -1,6 +1,6 @@
 <h1>{{title}}</h1>
 <div>
   {{#each catalogue}}
-    <div>{{this.name}} - {{this.tickets.length}} tickets left</div>
+  <div>{{this.date}} {{this.name}} - {{this.tickets.length}} tickets left</div>
   {{/each}}
 </div>
